--- a/HTML/HTML/HomePage.html
+++ b/HTML/HTML/HomePage.html
@@ -58,28 +58,34 @@
    <ul class="sidebar-menu in">
     
       <li class="">
-        <a href="javaScript:void();" onclick="location.href='#'" class="waves-effect">
-         <span>HomePage</span><i class=""></i>
+        <a href="javaScript:void();" onclick="location.href='HomePage.html'" class="waves-effect">
+         <span>Home Page</span><i class=""></i>
         </a>
 
       </li>
       <li>
-        <a href="javaScript:void();" onclick="location.href='#'" class="waves-effect">
+        <a href="javaScript:void();" onclick="location.href='awerness.html'" class="waves-effect">
           <span>Awareness</span> 
         </a>
       </li> 
 
       <li>
-        <a href="javaScript:void();" onclick="location.href='#'" class="waves-effect">
-          <span>About As</span>
+        <a href="javaScript:void();" onclick="location.href='aboutus.html'" class="waves-effect">
+          <span>About us</span>
         </a>
       </li>
 
       <li>
-        <a href="javaScript:void();" onclick="location.href='#'" class="waves-effect">
-          <span>Charts</span> 
+        <a href="javaScript:void();" onclick="location.href='worldmap.html'" class="waves-effect">
+          <span>World Map</span> 
         </a>
-       </li> 
+       </li>
+       
+      <li>
+        <a href="javaScript:void();" onclick="location.href='chatbot.html'" class="waves-effect">
+          <span>Chatbot</span>
+        </a>
+      </li>
     </ul>
    
    </div>
