adding page understand COVID-19

--- a/HTML/HTML/HomePage.html
+++ b/HTML/HTML/HomePage.html
@@ -70,12 +70,6 @@
       </li> 
 
       <li>
-        <a href="javaScript:void();" onclick="location.href='aboutus.html'" class="waves-effect">
-          <span>About us</span>
-        </a>
-      </li>
-
-      <li>
         <a href="javaScript:void();" onclick="location.href='worldmap.html'" class="waves-effect">
           <span>World Map</span> 
         </a>
@@ -86,6 +80,17 @@
           <span>Chatbot</span>
         </a>
       </li>
+      <li>
+        <a href="javaScript:void();" onclick="location.href='understand COVID-19.html'" class="waves-effect">
+          <span>Understand COVID-19</span>
+        </a>
+      </li>
+      <li>
+        <a href="javaScript:void();" onclick="location.href='aboutus.html'" class="waves-effect">
+          <span>About us</span>
+        </a>
+      </li>
+
     </ul>
    
    </div>
